<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c"
    tools:context=".MasukActivity">


    <!--elemen yang digunakan untuk menampilkan text, dengan teksnya
    "Biodata", deng id TextView textView2,
    layout width dan height menggunakan wrap content,
    warna teksnya hitam, ukuran teks 34sp, gaya teksnya tebal,
    layout constraintEnd toEndOf, constraintStart toStartOf dan constrainTop toTopOf menggunakan parent-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/biodata"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--elemen widget yang digunakan untuk menampilkan sebuah gambar,
     id gambarnya yaitu imageView2, description kontennya FOTOKU,
      ukuran layout width 156dp, ukuran height 178dp,
      ukuran marginTopnya 64dp-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="178dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/fotoku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/fotoku" />




    <!--elemen yang digunakan untuk menampilkan text, dengan teksnya
    "Nama : Kismiwati", deng id TextView textNama,
    layout width dan height menggunakan wrap content,
    ukuran marginTop 80dp, warna teksnya hitam, gaya teksnya tebal-->
    <TextView
        android:id="@+id/textNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nama_kismiwati"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!--elemen yang digunakan untuk menampilkan text, dengan teksnya
    "NIM : 203110053", deng id TextView textNim,
    layout width dan height menggunakan wrap content,
    ukuran margin topnya 8dp, warna teksnya hitam
    gaya teksnya tebal,-->
    <TextView
        android:id="@+id/textNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nim_203110053"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textNama" />

    <!--elemen yang digunakan untuk menampilkan text, dengan teksnya
    "Prodi : RPLA", deng id TextView textNim
    layout margin start dan layout margin top 8dp,
    layout width dan height menggunakan wrap content,
    warna teksnya hitam, gaya teksnya tebal-->
    <TextView
        android:id="@+id/textProdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prodi_rpla"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textNim" />

    <!--elemen yang digunakan untuk menampilkan text, dengan teksnya
    "Jenjang : D3", deng id TextView textNim,
    layout width dan heightnya menggunakan wrap_content,
    layout margin start dan layout margin top dengan ukuran jarak 8dp,
    layout constraintEnd menggunakan parent,
    textColor untuk memberikan warna pada teks,
    textStyle bold digunakan untuk membuat teks menjadi tebal-->
    <TextView
        android:id="@+id/textJenjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/jenjang_d3"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textProdi" />

    <!--elemen ini digunakan untuk memproses data untuk beralih ke link profile github user
    teks yang dibutton "cek github,
    textColor digunakan untuk memberikan warna teks dengan warna hitam,
    untuk ukuran layout widthnya 141dp, ukuran layout height 55dp-->
    <Button
        android:id="@+id/tombolGithub"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="44dp"
        android:text="@string/cek_github"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <!--elemen yang digunakan untuk beralih ke activity wisata atau halaman wisata,
    ukuran layout widthnya 141dp, layout height 55dp,
    ukuran margin startnya 28dp, margin topnya 76dp,
    teks yang ada dalam buttunnya Wisata dan untuk  layout constraintstart tostartofnya adalah parent-->
    <Button
        android:id="@+id/tombolUser"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/wisata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>